fix overflow of message

--- a/React/src/Message.css
+++ b/React/src/Message.css
@@ -4,6 +4,9 @@
     font-size: 16px;
     padding: 10px;
     width: fit-content;
+    overflow-wrap: break-word;
+    white-space: pre-wrap;
+    word-break: break-all;
     border-radius: 10px;
     background-color: white;
     margin-bottom: 30px;
